# DIY_Stream_Deck

./: PCS_Test.py  README.md
ESP32S3/: tool_set_config.json
ESP32S3/ESP32Code/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32S3/ESP32Code/main/: main.c
ESP32S3/ESP32Code/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP32S3/ESP32Code/main/ui/components/: ui_comp_hook.c
ESP32S3/ESP32Code/main/ui/images/: ui_img_1531840258.c  ui_img_amazon_png.c  ui_img_back_png.c  ui_img_calculator_png.c  ui_img_copy_png.c  ui_img_cut_png.c  ui_img_discord_png.c  ui_img_duolingo_png.c  ui_img_github_png.c  ui_img_hibernate_png.c  ui_img_home_png.c  ui_img_instagram_png.c  ui_img_mic_png.c  ui_img_mute_png.c  ui_img_netflix_png.c  ui_img_notion_png.c  ui_img_paste_png.c  ui_img_photoshop_png.c  ui_img_shutdown_png.c  ui_img_sleep_png.c  ui_img_spotify_png.c  ui_img_text_extractor_png.c  ui_img_vs_code_png.c  ui_img_whatsapp_png.c  ui_img_youtube_png.c
ESP32S3/ESP32Code/main/ui/screens/: ui_Screen1.c  ui_Screen2.c
